MYZ-7147 fix pocket z-index

--- a/src/components/notification/z-pocket/styles.css
+++ b/src/components/notification/z-pocket/styles.css
@@ -15,7 +15,7 @@
   bottom: 0;
   width: 100%;
   height: 100%;
-  z-index: 1000;
+  z-index: 99999;
   overflow: hidden;
   display: flex;
   flex-direction: row;
